# RoadMarkingExtraction

./: CMakeLists.txt  README.md  Readme(Chinese).txt  dataIo.cpp  dataIo.h  data_structure.h  ground_extraction.cpp  ground_extraction.h  imageprocess.cpp  imageprocess.h  main.cpp  parameter_list_example.txt  pointcloudprocess.cpp  pointcloudprocess.h  roadmarkings_parameter_list_example.txt  segmentation.cpp  segmentation.h  utility.h  voxelFilter.cpp  voxelFilter.h  标线提取程序-帮助文档.txt
Models_Cityroad/: model02_rectangle.las  model02_rectangle2.las  model03_forward_arrow.las  model04_forward_right_arrow.las  model05_right_arrow.las  model06_inverse_arrow.las
Models_Highway/: mark2_rectangle.las  mark3_forward_arrow.las  mark4_forward_right_arrow.las
config/: parameter_highway_example.txt  parameter_urban_example.txt
include/: data_io.h  ground_extraction.h  imageprocess.h  k_means.h  modelmatch.h  pointcloudprocess.h  roadmarking_dll.h  utility.h
model_pool/models_highway_example/: model02_rectangle.pcd  model03_forward_arrow.pcd  model04_forward_right_arrow.pcd
model_pool/models_urban_example/: model02_rectangle2.pcd  model03_forward_arrow.pcd  model04_forward_right_arrow.pcd  model05_right_arrow.pcd  model06_inverse_arrow.pcd  model07_cross.pcd  model08_dimond.pcd
script/: download_dependent_lib.sh  run_folder_input.sh  run_single_input.sh
src/: data_io.cpp  ground_extraction.cpp  imageprocess.cpp  k_means.cpp  modelmatch.cpp  pointcloudprocess.cpp
test/: roadmarking_main.cpp
